# cxx-proj-template

./: .gitignore  CMakeLists.txt  README.md  create_new_module.sh  use_default_vscode_configs.sh
libs/: CMakeLists.txt
src/: CMakeLists.txt
src/hello_world/: CMakeLists.txt
src/hello_world/include/projectname/hello_world/: hello_world.hpp
src/hello_world/src/: hello_world.cpp
src/main/: CMakeLists.txt
src/main/src/: main.cpp
templates/template_app_module/: CMakeLists.txt
templates/template_lib_module/: CMakeLists.txt
